@@ -1,3 +1,7 @@
++ added link to own peer stats at statusbar (daburna) 
++ added add bookmark function for contentarea (daburna) 
++ added accesskeys for contentarea (daburna)
+
 v 0.2.4 - 05.02.2008
 =====================================================================
 + added new iconset (daburna)
